<resources>
    <string name="app_name">MobileWeather</string>
    <string name="launcher_name">@string/app_name</string>
    <string name="activity_name">@string/launcher_name</string>
    <string name="widget_1x1">Weather 1x1</string>
    <string name="widget_2x2">Weather 2x2</string>
    <string name="widget_4x2">Weather 4x2</string>
    <string name="calm">Calm</string>
    <string name="north_wind">North wind</string>
    <string name="north_east_wind">NE wind</string>
    <string name="east_wind">East wind</string>
    <string name="south_east_wind">SE wind</string>
    <string name="south_wind">South wind</string>
    <string name="south_west_wind">SW wind</string>
    <string name="west_wind">West wind</string>
    <string name="north_west_wind">NW wind</string>
    <string name="over">over</string>
    <string name="temperature">Temperature</string>
    <string name="dewpoint">Dew point</string>
    <string name="gust">Wind gust</string>
    <string name="humidity">Humidity</string>
    <string name="pressure">Pressure</string>
    <string name="cloudiness">Cloudiness</string>
    <string name="visibility">Visibility</string>
    <string name="rain">Rain</string>
    <string name="snowdepth">Snow depth</string>
    <string name="sky_clear">sky clear</string>
    <string name="almost_clear">almost clear</string>
    <string name="partly_cloudy">partly cloudy</string>
    <string name="almost_cloudy">almost cloudy</string>
    <string name="cloudy">cloudy</string>
    <string name="next_hours_widget">Next hours</string>
    <string name="next_days_widget">Next days</string>
    <string name="observation">Observation</string>
    <string name="loading">Loading weather data...</string>
    <string name="update_failed">Failed to load weather data</string>
    <string name="airplane_mode">The device is in airplane mode. Weather updates will refresh when the internet connection is back.</string>
    <string name="location_failed">Location failed</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="gradient">Gradient</string>
    <string name="transparent">Transparent</string>
    <string name="Forecast">Forecast</string>
    <string name="nexthours">Next hours</string>
    <string name="location">Location</string>
    <string name="positioned_location">Current location</string>
    <string name="theme">Theme</string>
    <string name="define_widget_settings">Define widget settings</string>
    <string name="allow_positioning">Allow location services</string>
    <string name="denied_positioning">You denied positioning. Use favorite positions instead or allow location services.</string>
    <string name="forecast_location_not_defined">Forecast location not defined.</string>
    <string name="widget_resize_info">Please notice that you can resize widget to hide information or show more information.</string>
    <string name="small_widget">Weather compact</string>
    <string name="medium_widget">Weather medium</string>
    <string name="large_widget">Weather large</string>
    <string name="widget_favorite_info">Please define favorites in the weather app, if you want to use widget without location services. Please allow background location service (Allow always), if you use current location.</string>
    <string name="battery_saving">Power saving is enabled. We recommended disabling it for the app so that widget can update weather data.</string>
    <string name="open_settings">Open settings</string>
    <string name="location_service_info">The app collects location data to enable widget update weather data for current location even when the app is closed or not in use. Alternatively you can use favorite locations without location service.</string>
    <string name="location_service_info_title">Do you want to enable location service?</string>
    <string name="ask_permission">Ask permission</string>
    <string name="updated">"Updated"</string>
    <string name="device_mode">Use default</string>
    <string name="add_your_favorite_locations">Add your favorite locations</string>
    <string name="add_favorite_locations_explanation">Please add your favorite places in the Weather app, if you want to use widget without location services.</string>
    <string name="add_more_favorite_locations">Add more favorite locations</string>
    <string name="small_warnings_widget">Warnings compact</string>
    <string name="allow_background_location_service">Please allow the Weather app background location service (Allow all the time) use your current location to show weather near you.</string>
    <string name="warnings">Warnings</string>
    <string name="no_warnings">No warnings</string>
    <string name="warnings_flood">Flood warning</string>
    <string name="warnings_grass_fire_weather">Grass fire warning</string>
    <string name="warnings_hot_weather">Heat wave warning</string>
    <string name="warnings_forest_fire_weather" >Wildfire warning</string>
    <string name="warnings_cold_weather" >Cold warning</string>
    <string name="warnings_icing" >Ice accretion warning</string>
    <string name="warnings_pedestrian_safety" >Pedestrian weather warning</string>
    <string name="warnings_rain" >Heavy rain warning</string>
    <string name="warnings_sea_water_height_high" >Warning for high sea level</string>
    <string name="warnings_sea_water_height_shallow" >Warning for low sea level</string>
    <string name="warnings_sea_wave_height" >Wave height warning</string>
    <string name="warnings_sea_wind" >Wind warning for sea areas</string>
    <string name="warnings_thunder_storm" >Severe thunderstorm warning</string>
    <string name="warnings_traffic_weather" >Traffic weather warning</string>
    <string name="warnings_uv_note" >UV advisory</string>
    <string name="warnings_wind" >Wind warning for land areas</string>
    <string name="warnings_sea_thunder_storm">Thunderstorm wind gusts for sea areas</string>
    <string name="s_1">Clear</string>
    <string name="s_2">Mostly clear</string>
    <string name="s_4">Partly cloudy</string>
    <string name="s_6">Mostly cloudy</string>
    <string name="s_7">Overcast</string>
    <string name="s_9">Fog</string>
    <string name="s_11">Drizzle</string>
    <string name="s_14">Freezing drizzle</string>
    <string name="s_17">Freezing rain</string>
    <string name="s_21">Isolated showers</string>
    <string name="s_24">Scattered showers</string>
    <string name="s_27">Showers</string>
    <string name="s_31">Partly cloudy and periods of light rain</string>
    <string name="s_32">Partly cloudy and periods of moderate rain</string>
    <string name="s_33">Partly cloudy and periods of heavy rain</string>
    <string name="s_34">Mostly cloudy and periods of light rain</string>
    <string name="s_35">Mostly cloudy and periods of moderate rain</string>
    <string name="s_36">Mostly cloudy and periods of heavy rain</string>
    <string name="s_37">Light rain</string>
    <string name="s_38">Moderate rain</string>
    <string name="s_39">Heavy rain</string>
    <string name="s_41">Isolated light sleet showers</string>
    <string name="s_42">Isolated moderate sleet showers</string>
    <string name="s_43">Isolated heavy sleet showers</string>
    <string name="s_44">Scattered light sleet showers</string>
    <string name="s_45">Scattered moderate sleet showers</string>
    <string name="s_46">Scattered heavy sleet showers</string>
    <string name="s_47">Light sleet</string>
    <string name="s_48">Moderate sleet</string>
    <string name="s_49">Heavy sleet</string>
    <string name="s_51">Isolated light snow showers</string>
    <string name="s_52">Isolated moderate snow showers</string>
    <string name="s_53">Isolated heavy snow showers</string>
    <string name="s_54">Scattered light snow showers</string>
    <string name="s_55">Scattered moderate snow showers</string>
    <string name="s_56">Scattered heavy snow showers</string>
    <string name="s_57">Light snowfall</string>
    <string name="s_58">Moderate snowfall</string>
    <string name="s_59">Heavy snowfall</string>
    <string name="s_61">Isolated hail showers</string>
    <string name="s_64">Scattered hail showers</string>
    <string name="s_67">Hail showers</string>
    <string name="s_71">Isolated thundershowers</string>
    <string name="s_74">Scattered thundershowers</string>
    <string name="s_77">Thundershowers</string>
    <string name="gradient_background">Gradient background</string>
    <string name="gradient_background_limitations">Gradient background requires that dark theme is enabled on system settings.</string>
    <string name="location_services_not_allowed">Location services are not allowed. Please enable them in the settings.</string>
    <string name="retrying_location_services">Retrying location services automatically.</string>
    <string name="automatic_retry">Weather updates will refresh when the internet connection is back.</string>
    <string name="old_weather_data">The weather information is outdated</string>
    <string name="ready">Ready</string>
    <string name="failed_to_load_alerts">Failed to load alerts</string>
    <string name="airplane_mode_warnings">The device is in airplane mode. Warnings will be updated once the internet connection is back.</string>
    <string name="automatic_retry_warnings">Warnings will refresh when the internet connection is back.</string>
    <string name="location_outside_data_area_title">No alerts are available for this location</string>
    <string name="location_outside_data_area_description">Warnings are only available for the Finland region.</string>
    <string name="medium_warnings_widget">Warnings</string>
    <string name="more_warnings">More warnings</string>
</resources>
