<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dip"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:id="@+id/configurationLinearLayout"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/batteryOptimizationWarning"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="64dip"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:src="@drawable/ic_warning_black" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/battery_saving" />

                </LinearLayout>

                <Button
                    android:id="@+id/appSettingsButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/open_settings" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:text="@string/define_widget_settings" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/title_padding"
                android:text="@string/background" />

            <RadioGroup
                android:id="@+id/backgroundRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checkedButton="@id/optionDeviceModeRadioButton">

                <RadioButton
                    android:id="@+id/optionDeviceModeRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingTop="@dimen/radiobutton_padding"
                    android:paddingBottom="@dimen/radiobutton_padding"
                    android:text="@string/device_mode" />

                <RadioButton
                    android:id="@+id/optionDarkRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingTop="@dimen/radiobutton_padding"
                    android:paddingBottom="@dimen/radiobutton_padding"
                    android:text="@string/dark" />

                <RadioButton
                    android:id="@+id/optionLightRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingTop="@dimen/radiobutton_padding"
                    android:paddingBottom="@dimen/radiobutton_padding"
                    android:text="@string/light" />

                <!-- TODO: Gradient theme disabled for now because gradient color not ready yet -->
                <RadioButton
                    android:id="@+id/optionGradientRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingTop="@dimen/radiobutton_padding"
                    android:paddingBottom="@dimen/radiobutton_padding"
                    android:text="@string/gradient"
                    android:visibility="gone" />
            </RadioGroup>

            <TextView
                android:id="@+id/forecastTitleTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/title_padding"
                android:text="@string/Forecast"
                android:visibility="gone" />

            <RadioGroup
                android:id="@+id/forecastRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checkedButton="@+id/optionHoursRadioButton"
                android:visibility="gone">

                <RadioButton
                    android:id="@+id/optionHoursRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingTop="@dimen/radiobutton_padding"
                    android:paddingBottom="@dimen/radiobutton_padding"
                    android:text="@string/next_hours_widget" />

                <RadioButton
                    android:id="@+id/optionDaysRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingTop="@dimen/radiobutton_padding"
                    android:paddingBottom="@dimen/radiobutton_padding"
                    android:text="@string/next_days_widget" />
            </RadioGroup>

            <TextView
                android:id="@+id/locationTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/title_padding"
                android:text="@string/location" />

            <RadioGroup
                android:id="@+id/locationRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checkedButton="@+id/optionPositionedRadioButton">

                <RadioButton
                    android:id="@+id/optionPositionedRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingTop="@dimen/radiobutton_padding"
                    android:paddingBottom="@dimen/radiobutton_padding"
                    android:text="@string/positioned_location" />

            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="45dp"
                android:text="@string/add_favorite_locations_explanation"
                android:textColor="#000000"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/addFavoriteLocationsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="14dp"
                android:drawablePadding="4dp"
                android:text="@string/add_your_favorite_locations"
                android:textColor="#000000"
                android:textSize="15sp"
                android:textStyle="bold"
                app:drawableEndCompat="@drawable/ic_open_in_new_black" />

            <Button
                android:id="@+id/okButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:text="@string/ready" />

            <TextView
                android:id="@+id/favoriteInfoTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/widget_favorite_info"
                android:visibility="gone" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
